--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,24 +3,16 @@ version: '3.8'
 services:
   backend:
     build: ./backend
-    command: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:8000
-    ports:
-      - "8000:8000"
-    environment:
-      - ENV=production
-    restart: always
-    networks:
-      - app-network
+    command: gunicorn -w 2 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:8000
+    expose:
+      - "8000"
 
   frontend:
     build: ./frontend
-    ports:
-      - "3000:3000"
+    volumes:
+      - ./frontend/build:/usr/share/nginx/html
     depends_on:
       - backend
-    restart: always
-    networks:
-      - app-network
 
   nginx:
     image: nginx:alpine
@@ -32,10 +24,3 @@ services:
     depends_on:
       - backend
       - frontend
-    restart: always
-    networks:
-      - app-network
-
-networks:
-  app-network:
-    driver: bridge
